RESOLVED FIXED139781
[Win] Correct Windows tests after Bug 139149
https://bugs.webkit.org/show_bug.cgi?id=139781
Summary [Win] Correct Windows tests after Bug 139149
Brent Fulgham
Reported 2014-12-18 10:57:53 PST
Some additional diagnostics were added in Bug 139149 that cause thousands of Windows tests to fail. This patch implements the missing function so that we can remove this warning and get the bots green again.
Attachments
Patch (32.71 KB, patch)
2014-12-18 11:30 PST, Brent Fulgham
no flags
Patch (20.75 KB, patch)
2014-12-18 11:33 PST, Brent Fulgham
andersca: review+
Brent Fulgham
Comment 1 2014-12-18 11:30:45 PST
WebKit Commit Bot
Comment 2 2014-12-18 11:32:12 PST
Attachment 243506 [details] did not pass style-queue: ERROR: Source/WebKit/win/WebApplicationCache.cpp:26: Found other header before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Source/WebKit/win/WebApplicationCache.cpp:27: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Source/WebKit/win/WebApplicationCache.cpp:32: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 3 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brent Fulgham
Comment 3 2014-12-18 11:33:11 PST
WebKit Commit Bot
Comment 4 2014-12-18 11:35:11 PST
Attachment 243507 [details] did not pass style-queue: ERROR: Source/WebKit/win/WebApplicationCache.cpp:26: Found other header before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Source/WebKit/win/WebApplicationCache.cpp:27: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Source/WebKit/win/WebApplicationCache.cpp:32: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 3 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brent Fulgham
Comment 5 2014-12-18 11:48:18 PST
(In reply to comment #4) > Attachment 243507 [details] did not pass style-queue: > > > ERROR: Source/WebKit/win/WebApplicationCache.cpp:26: Found other header > before WebCore config.h. Should be: config.h, primary header, blank line, > and then alphabetically sorted. [build/include_order] [4] > ERROR: Source/WebKit/win/WebApplicationCache.cpp:27: Found header this file > implements after other header. Should be: config.h, primary header, blank > line, and then alphabetically sorted. [build/include_order] [4] > ERROR: Source/WebKit/win/WebApplicationCache.cpp:32: Alphabetical sorting > problem. [build/include_order] [4] > Total errors found: 3 in 11 files > > > If any of these errors are false positives, please file a bug against > check-webkit-style. This ordering is required by the IDL build steps on Windows.
Brent Fulgham
Comment 6 2014-12-18 11:56:47 PST
Note You need to log in before you can comment on or make changes to this bug.