Source/WebKit: [Win] Correct Windows tests after Bug 139149. https://bugs.webkit.org/show_bug.cgi?id=139781

Reviewed by Anders Carlsson.

* WebKit.vcxproj/Interfaces/Interfaces.vcxproj: Add new interface.
* WebKit.vcxproj/Interfaces/Interfaces.vcxproj.filters: Ditto.
* WebKit.vcxproj/WebKit/WebKit.vcxproj: Add new application cache object.
* WebKit.vcxproj/WebKit/WebKit.vcxproj.filters: Ditto.

Source/WebKit/win:
[Win] Correct Windows tests after Bug 139149.
https://bugs.webkit.org/show_bug.cgi?id=139781

Reviewed by Anders Carlsson.

* Interfaces/IWebApplicationCache.idl: Added.
* Interfaces/WebKit.idl: Add new IDL file.
* WebActionPropertyBag.cpp:
(WebActionPropertyBag::Read): Remove old debugging message.
* WebApplicationCache.cpp: Added.
(WebApplicationCache::WebApplicationCache):
(WebApplicationCache::~WebApplicationCache):
(WebApplicationCache::createInstance):
(WebApplicationCache::QueryInterface):
(WebApplicationCache::AddRef):
(WebApplicationCache::Release):
(WebApplicationCache::maximumSize):
(WebApplicationCache::setMaximumSize):
(WebApplicationCache::defaultOriginQuota):
(WebApplicationCache::setDefaultOriginQuota):
(WebApplicationCache::diskUsageForOrigin):
(WebApplicationCache::deleteAllApplicationCaches):
(WebApplicationCache::deleteCacheForOrigin):
(WebApplicationCache::originsWithCache):
* WebApplicationCache.h: Added.
* WebKitClassFactory.cpp: Add new interface header.

Tools:
[Win] Correct Windows tests after Bug 139149 (edit)
https://bugs.webkit.org/show_bug.cgi?id=139781

Reviewed by Anders Carlsson.

* DumpRenderTree/win/TestRunnerWin.cpp:
(TestRunner::clearAllApplicationCaches): Use new WebApplicationCache
interface.


Canonical link: https://commits.webkit.org/157688@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177512 268f45cc-cd09-0410-ab3c-d52691b4dbfc