Source/WebKit/win/WebActionPropertyBag.cpp
@@ -110,7 +110,6 @@ HRESULT STDMETHODCALLTYPE WebActionPropertyBag::Read(LPCOLESTR pszPropName, VARI
     if (!pszPropName)
         return E_POINTER;
 
-    WTFLogAlways("pVar Pointer Value: %p", pVar);
     VariantClear(pVar);
 
     if (isEqual(pszPropName, WebActionNavigationTypeKey)) {
