Source/WebKit/win/WebKitClassFactory.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2006, 2007 Apple Inc.  All rights reserved.
+ * Copyright (C) 2006, 2007, 2014 Apple Inc.  All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -28,6 +28,7 @@
 
 #include "CFDictionaryPropertyBag.h"
 #include "ForEachCoClass.h"
+#include "WebApplicationCache.h"
 #include "WebArchive.h"
 #include "WebCache.h"
 #include "WebCoreStatistics.h"
